refactor(ui): packaging of utask lib

--- a/ui/dashboard/projects/utask-lib/package.json
+++ b/ui/dashboard/projects/utask-lib/package.json
@@ -2,21 +2,21 @@
     "name": "utask-lib",
     "version": "0.0.1",
     "peerDependencies": {
-        "monaco-editor": "0.21.2",
-        "ng-zorro-antd": "10.1.2",
-        "@angular/common": "11.0.0",
-        "@angular/core": "11.0.0",
-        "@angular/animations": "11.0.0",
-        "@angular/compiler": "11.0.0",
-        "@angular/forms": "11.0.0",
-        "@angular/localize": "11.0.0",
-        "@angular/platform-browser": "11.0.0",
-        "@angular/platform-browser-dynamic": "11.0.0",
-        "@angular/router": "11.0.0",
-        "convert-yaml": "1.0.5",
-        "moment": "2.29.1",
-        "@types/lodash-es": "4.17.3",
-        "@swimlane/ngx-charts": "16.0.0"
+        "monaco-editor": "^0.21.2",
+        "ng-zorro-antd": "^10.1.2",
+        "@angular/common": "^11.0.0",
+        "@angular/core": "^11.0.0",
+        "@angular/animations": "^11.0.0",
+        "@angular/compiler": "^11.0.0",
+        "@angular/forms": "^11.0.0",
+        "@angular/localize": "^11.0.0",
+        "@angular/platform-browser": "^11.0.0",
+        "@angular/platform-browser-dynamic": "^11.0.0",
+        "@angular/router": "^11.0.0",
+        "convert-yaml": "^1.0.5",
+        "moment": "^2.29.1",
+        "@types/lodash-es": "^4.17.3",
+        "@swimlane/ngx-charts": "^16.0.0"
     },
     "dependencies": {}
 }
