chore(ui): release lib to npm registry

--- a/ui/dashboard/projects/utask-lib/package.json
+++ b/ui/dashboard/projects/utask-lib/package.json
@@ -1,6 +1,5 @@
 {
-    "name": "utask-lib",
-    "version": "0.0.1",
+    "name": "@ovhcloud/utask-lib",
     "peerDependencies": {
         "monaco-editor": "^0.21.2",
         "ng-zorro-antd": "^10.1.2",
