fix(ui): dedicate function page, avoid yaml/json conversion

--- a/ui/dashboard/projects/utask-lib/package.json
+++ b/ui/dashboard/projects/utask-lib/package.json
@@ -1,5 +1,6 @@
 {
     "name": "@ovhcloud/utask-lib",
+    "version": "0.0.0",
     "peerDependencies": {
         "monaco-editor": "^0.21.2",
         "ng-zorro-antd": "^10.1.2",
