fix(ui/dashboard): Typo

--- a/ui/dashboard/package.json
+++ b/ui/dashboard/package.json
@@ -40,24 +40,24 @@
         "zone.js": "0.11.3"
     },
     "devDependencies": {
-        "@angular-builders/custom-webpack": "11.0.0",
-        "@angular-devkit/build-angular": "0.1100.1",
-        "@angular-devkit/build-ng-packagr": "0.1002.0",
+        "@angular-builders/custom-webpack": "11.1.1",
+        "@angular-devkit/build-angular": "0.1102.14",
+        "@angular-devkit/build-ng-packagr": "0.1100.0-next.5",
         "@angular/cli": "11.2.13",
         "@angular/compiler-cli": "11.2.14",
         "@angular/language-service": "11.2.14",
-        "@types/jasmine": "3.6.1",
+        "@types/jasmine": "3.6.2",
         "@types/jasminewd2": "2.0.8",
-        "@types/node": "14.14.7",
+        "@types/node": "14.14.11",
         "codelyzer": "6.0.1",
         "jasmine-core": "3.6.0",
         "jasmine-spec-reporter": "6.0.0",
-        "karma": "5.2.3",
+        "karma": "6.3.4",
         "karma-chrome-launcher": "3.1.0",
         "karma-coverage-istanbul-reporter": "3.0.3",
         "karma-jasmine": "4.0.1",
         "karma-jasmine-html-reporter": "1.5.4",
-        "ng-packagr": "11.2.4",
+        "ng-packagr": "12.1.0",
         "protractor": "7.0.0",
         "ts-node": "9.0.0",
         "tslint": "6.1.2",
