--- a/ui/dashboard/package.json
+++ b/ui/dashboard/package.json
@@ -1,67 +1,66 @@
 {
-    "name": "utask-ui",
-    "version": "0.0.0",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e",
-        "build:stats": "ng build --prod --stats-json",
-        "build:analyse": "webpack-bundle-analyzer dist/utask-ui/stats.json"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "11.2.14",
-        "@angular/cdk": "11.2.13",
-        "@angular/common": "11.2.14",
-        "@angular/compiler": "11.2.14",
-        "@angular/core": "11.2.14",
-        "@angular/forms": "11.2.14",
-        "@angular/localize": "11.2.14",
-        "@angular/platform-browser": "11.2.14",
-        "@angular/platform-browser-dynamic": "11.2.14",
-        "@angular/router": "11.2.14",
-        "@sentry/browser": "5.27.4",
-        "@swimlane/ngx-charts": "16.0.0",
-        "@types/lodash-es": "4.17.3",
-        "convert-yaml": "1.0.5",
-        "dagre-d3": "0.6.4",
-        "ejs": "3.1.5",
-        "jquery": "3.5.1",
-        "js-yaml": "3.14.0",
-        "lodash-es": "4.17.15",
-        "moment": "2.29.1",
-        "monaco-editor": "0.25.2",
-        "ng-zorro-antd": "11.4.1",
-        "rxjs": "6.6.3",
-        "tslib": "2.0.3",
-        "zone.js": "0.11.3"
-    },
-    "devDependencies": {
-        "@angular-builders/custom-webpack": "11.1.1",
-        "@angular-devkit/build-angular": "0.1102.14",
-        "@angular-devkit/build-ng-packagr": "0.1100.0-next.5",
-        "@angular/cli": "11.2.14",
-        "@angular/compiler-cli": "11.2.14",
-        "@angular/language-service": "11.2.14",
-        "@types/jasmine": "3.6.2",
-        "@types/jasminewd2": "2.0.8",
-        "@types/node": "14.14.11",
-        "codelyzer": "6.0.1",
-        "jasmine-core": "3.6.0",
-        "jasmine-spec-reporter": "6.0.0",
-        "karma": "6.3.4",
-        "karma-chrome-launcher": "3.1.0",
-        "karma-coverage-istanbul-reporter": "3.0.3",
-        "karma-jasmine": "4.0.1",
-        "karma-jasmine-html-reporter": "1.5.4",
-        "ng-packagr": "12.1.0",
-        "protractor": "7.0.0",
-        "ts-node": "9.0.0",
-        "tslint": "6.1.2",
-        "typescript": "4.1.5",
-        "webpack-bundle-analyzer": "4.1.0"
-    }
+  "name": "utask-ui",
+  "version": "0.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "build:stats": "ng build --configuration production --stats-json",
+    "build:analyse": "webpack-bundle-analyzer dist/utask-ui/stats.json"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "12.2.12",
+    "@angular/cdk": "12.2.12",
+    "@angular/common": "12.2.12",
+    "@angular/compiler": "12.2.12",
+    "@angular/core": "12.2.12",
+    "@angular/forms": "12.2.12",
+    "@angular/localize": "12.2.12",
+    "@angular/platform-browser": "12.2.12",
+    "@angular/platform-browser-dynamic": "12.2.12",
+    "@angular/router": "12.2.12",
+    "@sentry/browser": "5.27.4",
+    "@swimlane/ngx-charts": "^19.1.0",
+    "@types/lodash-es": "4.17.3",
+    "convert-yaml": "2.0.5",
+    "dagre-d3": "0.6.4",
+    "ejs": "3.1.5",
+    "jquery": "3.5.1",
+    "js-yaml": "3.14.0",
+    "lodash-es": "4.17.15",
+    "moment": "2.29.1",
+    "monaco-editor": "0.25.2",
+    "ng-zorro-antd": "12.0.1",
+    "rxjs": "6.6.3",
+    "zone.js": "~0.11.4"
+  },
+  "devDependencies": {
+    "@angular-builders/custom-webpack": "12.1.3",
+    "@angular-devkit/build-angular": "12.2.12",
+    "@angular-devkit/build-ng-packagr": "0.1002.0",
+    "@angular/cli": "12.2.12",
+    "@angular/compiler-cli": "12.2.12",
+    "@angular/language-service": "12.2.12",
+    "@types/jasmine": "3.6.2",
+    "@types/jasminewd2": "2.0.8",
+    "@types/node": "14.14.11",
+    "codelyzer": "6.0.2",
+    "eslint": "8.1.0",
+    "jasmine-core": "3.10.1",
+    "jasmine-spec-reporter": "7.0.0",
+    "karma": "6.3.7",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage-istanbul-reporter": "3.0.3",
+    "karma-jasmine": "4.0.1",
+    "karma-jasmine-html-reporter": "1.7.0",
+    "ng-packagr": "^12.0.0",
+    "protractor": "7.0.0",
+    "ts-node": "10.4.0",
+    "typescript": "4.3.5",
+    "webpack-bundle-analyzer": "4.5.0"
+  }
 }
