--- a/ui/editor/package.json
+++ b/ui/editor/package.json
@@ -11,16 +11,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.0.0",
-    "@angular/common": "11.0.0",
-    "@angular/compiler": "11.0.0",
-    "@angular/core": "11.0.0",
-    "@angular/forms": "11.0.0",
-    "@angular/localize": "11.0.0",
-    "@angular/platform-browser": "11.0.0",
-    "@angular/platform-browser-dynamic": "11.0.0",
-    "@angular/router": "11.0.0",
-    "@ng-bootstrap/ng-bootstrap": "8.0.0",
+    "@angular/animations": "12.2.12",
+    "@angular/common": "12.2.12",
+    "@angular/compiler": "12.2.12",
+    "@angular/core": "12.2.12",
+    "@angular/forms": "12.2.12",
+    "@angular/localize": "12.2.12",
+    "@angular/platform-browser": "12.2.12",
+    "@angular/platform-browser-dynamic": "12.2.12",
+    "@angular/router": "12.2.12",
+    "@ng-bootstrap/ng-bootstrap": "10.0.0",
     "bootstrap": "4.5.3",
     "brace": "0.11.1",
     "convert-yaml": "1.0.5",
@@ -32,20 +32,20 @@
     "lodash-es": "4.17.15",
     "rxjs": "6.6.3",
     "tslib": "2.0.3",
-    "zone.js": "0.11.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1100.2",
-    "@angular/cli": "11.2.8",
-    "@angular/compiler-cli": "11.0.2",
-    "@angular/language-service": "11.0.2",
+    "@angular-devkit/build-angular": "12.2.12",
+    "@angular/cli": "12.2.12",
+    "@angular/compiler-cli": "12.2.12",
+    "@angular/language-service": "12.2.12",
     "@types/jasmine": "3.6.2",
     "@types/jasminewd2": "2.0.8",
     "@types/node": "14.14.9",
     "codelyzer": "6.0.1",
     "jasmine-core": "3.6.0",
     "jasmine-spec-reporter": "6.0.0",
-    "karma": "5.2.3",
+    "karma": "6.3.7",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage-istanbul-reporter": "3.0.3",
     "karma-jasmine": "4.0.1",
@@ -53,6 +53,6 @@
     "protractor": "7.0.0",
     "ts-node": "9.0.0",
     "tslint": "6.1.0",
-    "typescript": "4.0.5"
+    "typescript": "4.3.5"
   }
 }
