--- a/ui/dashboard/package.json
+++ b/ui/dashboard/package.json
@@ -24,19 +24,22 @@
     "@angular/platform-browser-dynamic": "12.2.12",
     "@angular/router": "12.2.12",
     "@sentry/browser": "5.27.4",
-    "@swimlane/ngx-charts": "^19.1.0",
+    "@swimlane/ngx-charts": "19.2.0",
     "@types/lodash-es": "4.17.3",
     "convert-yaml": "2.0.5",
-    "dagre-d3": "0.6.4",
+    "d3-drag": "3.0.0",
+    "d3-transition": "3.0.1",
+    "d3-zoom": "3.0.0",
+    "dagre-compound": "0.0.8",
     "ejs": "3.1.5",
     "jquery": "3.5.1",
     "js-yaml": "3.14.0",
     "lodash-es": "4.17.15",
     "moment": "2.29.1",
-    "monaco-editor": "0.25.2",
+    "monaco-editor": "0.31.1",
     "ng-zorro-antd": "12.0.1",
     "rxjs": "6.6.3",
-    "zone.js": "~0.11.4"
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "12.1.3",
@@ -49,6 +52,18 @@
     "@types/jasminewd2": "2.0.8",
     "@types/node": "14.14.11",
     "codelyzer": "6.0.2",
+    "d3": "7.2.1",
+    "d3-array": "3.1.1",
+    "d3-brush": "3.0.0",
+    "d3-color": "3.0.1",
+    "d3-force": "3.0.0",
+    "d3-format": "3.1.0",
+    "d3-hierarchy": "3.1.1",
+    "d3-interpolate": "3.0.1",
+    "d3-scale": "4.0.2",
+    "d3-selection": "3.0.0",
+    "d3-shape": "3.0.1",
+    "d3-time-format": "4.1.0",
     "eslint": "8.1.0",
     "jasmine-core": "3.10.1",
     "jasmine-spec-reporter": "7.0.0",
@@ -57,7 +72,7 @@
     "karma-coverage-istanbul-reporter": "3.0.3",
     "karma-jasmine": "4.0.1",
     "karma-jasmine-html-reporter": "1.7.0",
-    "ng-packagr": "^12.0.0",
+    "ng-packagr": "12.2.5",
     "protractor": "7.0.0",
     "ts-node": "10.4.0",
     "typescript": "4.3.5",
