--- a/ui/dashboard/projects/utask-lib/package.json
+++ b/ui/dashboard/projects/utask-lib/package.json
@@ -2,8 +2,14 @@
     "name": "@ovhcloud/utask-lib",
     "version": "0.0.0",
     "peerDependencies": {
-        "monaco-editor": "^0.25.2",
+        "monaco-editor": "^0.31.1",
         "ng-zorro-antd": "^12.0.1",
+        "d3-drag": "^3.0.0",
+        "d3-selection": "^3.0.0",
+        "d3-shape": "^3.0.1",
+        "d3-transition": "^3.0.1",
+        "d3-zoom": "^3.0.0",
+        "dagre-compound": "^0.0.8",
         "@angular/common": "^12.2.12",
         "@angular/core": "^12.2.12",
         "@angular/animations": "^12.2.12",
@@ -16,7 +22,7 @@
         "convert-yaml": "^2.0.5",
         "moment": "^2.29.1",
         "@types/lodash-es": "^4.17.3",
-        "@swimlane/ngx-charts": "^19.1.0"
+        "@swimlane/ngx-charts": "^19.2.0"
     },
     "dependencies": {}
 }
