--- a/ui/dashboard/projects/utask-lib/package.json
+++ b/ui/dashboard/projects/utask-lib/package.json
@@ -2,21 +2,27 @@
     "name": "@ovhcloud/utask-lib",
     "version": "0.0.0",
     "peerDependencies": {
-        "monaco-editor": "^0.25.2",
-        "ng-zorro-antd": "^11.0.0",
-        "@angular/common": "^11.0.0",
-        "@angular/core": "^11.0.0",
-        "@angular/animations": "^11.0.0",
-        "@angular/compiler": "^11.0.0",
-        "@angular/forms": "^11.0.0",
-        "@angular/localize": "^11.0.0",
-        "@angular/platform-browser": "^11.0.0",
-        "@angular/platform-browser-dynamic": "^11.0.0",
-        "@angular/router": "^11.0.0",
-        "convert-yaml": "^1.0.5",
+        "monaco-editor": "^0.31.1",
+        "ng-zorro-antd": "^12.0.1",
+        "d3-drag": "^3.0.0",
+        "d3-selection": "^3.0.0",
+        "d3-shape": "^3.0.1",
+        "d3-transition": "^3.0.1",
+        "d3-zoom": "^3.0.0",
+        "dagre-compound": "^0.0.8",
+        "@angular/common": "^12.2.12",
+        "@angular/core": "^12.2.12",
+        "@angular/animations": "^12.2.12",
+        "@angular/compiler": "^12.2.12",
+        "@angular/forms": "^12.2.12",
+        "@angular/localize": "^12.2.12",
+        "@angular/platform-browser": "^12.2.12",
+        "@angular/platform-browser-dynamic": "^12.2.12",
+        "@angular/router": "^12.2.12",
+        "convert-yaml": "^2.0.5",
         "moment": "^2.29.1",
         "@types/lodash-es": "^4.17.3",
-        "@swimlane/ngx-charts": "^16.0.0"
+        "@swimlane/ngx-charts": "^19.2.0"
     },
     "dependencies": {}
 }
