--- a/ui/editor/package.json
+++ b/ui/editor/package.json
@@ -11,48 +11,48 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "12.2.12",
-    "@angular/common": "12.2.12",
-    "@angular/compiler": "12.2.12",
-    "@angular/core": "12.2.12",
-    "@angular/forms": "12.2.12",
-    "@angular/localize": "12.2.12",
-    "@angular/platform-browser": "12.2.12",
-    "@angular/platform-browser-dynamic": "12.2.12",
-    "@angular/router": "12.2.12",
-    "@ng-bootstrap/ng-bootstrap": "10.0.0",
-    "bootstrap": "4.5.3",
+    "@angular/animations": "13.3.1",
+    "@angular/common": "13.3.1",
+    "@angular/compiler": "13.3.1",
+    "@angular/core": "13.3.1",
+    "@angular/forms": "13.3.1",
+    "@angular/localize": "13.3.1",
+    "@angular/platform-browser": "13.3.1",
+    "@angular/platform-browser-dynamic": "13.3.1",
+    "@angular/router": "13.3.1",
+    "@ng-bootstrap/ng-bootstrap": "12.0.1",
+    "bootstrap": "5.1.3",
     "brace": "0.11.1",
-    "convert-yaml": "1.0.5",
-    "d3": "6.2.0",
+    "convert-yaml": "2.0.5",
+    "d3": "7.4.0",
     "dagre-d3": "0.6.4",
-    "jquery": "3.5.1",
-    "js-yaml": "3.14.0",
+    "jquery": "3.6.0",
+    "js-yaml": "4.1.0",
     "lodash": "4.17.21",
-    "lodash-es": "4.17.15",
-    "rxjs": "6.6.3",
-    "tslib": "2.0.3",
-    "zone.js": "~0.11.4"
+    "lodash-es": "4.17.21",
+    "rxjs": "7.5.5",
+    "tslib": "2.3.1",
+    "zone.js": "0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "12.2.12",
-    "@angular/cli": "12.2.12",
-    "@angular/compiler-cli": "12.2.12",
-    "@angular/language-service": "12.2.12",
-    "@types/jasmine": "3.6.2",
-    "@types/jasminewd2": "2.0.8",
-    "@types/node": "14.14.9",
-    "codelyzer": "6.0.1",
-    "jasmine-core": "3.6.0",
-    "jasmine-spec-reporter": "6.0.0",
-    "karma": "6.3.7",
-    "karma-chrome-launcher": "3.1.0",
+    "@angular-devkit/build-angular": "13.3.1",
+    "@angular/cli": "13.3.1",
+    "@angular/compiler-cli": "13.3.1",
+    "@angular/language-service": "13.3.1",
+    "@types/jasmine": "4.0.1",
+    "@types/jasminewd2": "2.0.10",
+    "@types/node": "17.0.23",
+    "codelyzer": "6.0.2",
+    "jasmine-core": "4.0.1",
+    "jasmine-spec-reporter": "7.0.0",
+    "karma": "6.3.17",
+    "karma-chrome-launcher": "3.1.1",
     "karma-coverage-istanbul-reporter": "3.0.3",
-    "karma-jasmine": "4.0.1",
-    "karma-jasmine-html-reporter": "1.5.4",
+    "karma-jasmine": "4.0.2",
+    "karma-jasmine-html-reporter": "1.7.0",
     "protractor": "7.0.0",
-    "ts-node": "9.0.0",
+    "ts-node": "10.7.0",
     "tslint": "6.1.0",
-    "typescript": "4.3.5"
+    "typescript": "4.6.3"
   }
 }
