feat: remove convert-yaml dependency

--- a/ui/dashboard/package.json
+++ b/ui/dashboard/package.json
@@ -20,16 +20,12 @@
     "@angular/core": "13.3.1",
     "@angular/forms": "13.3.1",
     "@angular/localize": "13.3.1",
-    "@angular/platform-browser": "13.3.1",
     "@angular/platform-browser-dynamic": "13.3.1",
+    "@angular/platform-browser": "13.3.1",
     "@angular/router": "13.3.1",
     "@sentry/browser": "6.19.3",
     "@swimlane/ngx-charts": "20.1.0",
-    "@types/lodash-es": "4.17.6",
     "convert-yaml": "2.0.5",
-    "d3-drag": "3.0.0",
-    "d3-transition": "3.0.1",
-    "d3-zoom": "3.0.0",
     "dagre-compound": "0.0.11",
     "ejs": "3.1.6",
     "jquery": "3.6.0",
@@ -39,6 +35,7 @@
     "monaco-editor": "0.33.0",
     "ng-zorro-antd": "13.1.1",
     "rxjs": "7.5.5",
+    "tslib": "2.3.0",
     "zone.js": "0.11.5"
   },
   "devDependencies": {
@@ -49,28 +46,17 @@
     "@angular/language-service": "13.3.1",
     "@types/jasmine": "4.0.1",
     "@types/jasminewd2": "2.0.10",
+    "@types/lodash-es": "4.17.6",
     "@types/node": "17.0.23",
     "codelyzer": "6.0.2",
-    "d3": "7.4.0",
-    "d3-array": "3.1.1",
-    "d3-brush": "3.0.0",
-    "d3-color": "3.1.0",
-    "d3-force": "3.0.0",
-    "d3-format": "3.1.0",
-    "d3-hierarchy": "3.1.1",
-    "d3-interpolate": "3.0.1",
-    "d3-scale": "4.0.2",
-    "d3-selection": "3.0.0",
-    "d3-shape": "3.1.0",
-    "d3-time-format": "4.1.0",
     "eslint": "8.12.0",
     "jasmine-core": "4.0.1",
     "jasmine-spec-reporter": "7.0.0",
-    "karma": "6.3.17",
     "karma-chrome-launcher": "3.1.1",
     "karma-coverage-istanbul-reporter": "3.0.3",
-    "karma-jasmine": "4.0.2",
     "karma-jasmine-html-reporter": "1.7.0",
+    "karma-jasmine": "4.0.2",
+    "karma": "6.3.17",
     "ng-packagr": "13.3.0",
     "protractor": "7.0.0",
     "ts-node": "10.7.0",
