--- a/ui/dashboard/tsconfig.json
+++ b/ui/dashboard/tsconfig.json
@@ -8,17 +8,16 @@
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "module": "esnext",
+    "module": "es2020",
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2015",
+    "target": "es2017",
     "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
-      "es2018",
-      "dom",
-      "ES2020.Promise"
+      "es2020",
+      "dom"
     ],
     "paths": {
       "utask-lib": [
