--- a/ui/dashboard/package.json
+++ b/ui/dashboard/package.json
@@ -20,12 +20,19 @@
     "@angular/core": "13.3.1",
     "@angular/forms": "13.3.1",
     "@angular/localize": "13.3.1",
-    "@angular/platform-browser-dynamic": "13.3.1",
     "@angular/platform-browser": "13.3.1",
+    "@angular/platform-browser-dynamic": "13.3.1",
     "@angular/router": "13.3.1",
     "@sentry/browser": "6.19.3",
     "@swimlane/ngx-charts": "20.1.0",
+    "@types/d3": "7.1.0",
     "convert-yaml": "2.0.5",
+    "d3-drag": "3.0.0",
+    "d3-selection": "3.0.0",
+    "d3-shape": "3.1.0",
+    "d3-transition": "3.0.1",
+    "d3-zoom": "3.0.0",
+    "dagre": "0.8.5",
     "dagre-compound": "0.0.11",
     "ejs": "3.1.6",
     "jquery": "3.6.0",
@@ -52,11 +59,11 @@
     "eslint": "8.12.0",
     "jasmine-core": "4.0.1",
     "jasmine-spec-reporter": "7.0.0",
+    "karma": "6.3.17",
     "karma-chrome-launcher": "3.1.1",
     "karma-coverage-istanbul-reporter": "3.0.3",
-    "karma-jasmine-html-reporter": "1.7.0",
     "karma-jasmine": "4.0.2",
-    "karma": "6.3.17",
+    "karma-jasmine-html-reporter": "1.7.0",
     "ng-packagr": "13.3.0",
     "protractor": "7.0.0",
     "ts-node": "10.7.0",
