feat: add waiting state for subtasks steps
Signed-off-by: Thomas Bétrancourt <thomas@betrancourt.net>

--- a/ui/dashboard/angular.json
+++ b/ui/dashboard/angular.json
@@ -96,7 +96,8 @@
                     "builder": "@angular-builders/custom-webpack:dev-server",
                     "options": {
                         "proxyConfig": "proxy.conf.js",
-                        "browserTarget": "utask-ui:build"
+                        "browserTarget": "utask-ui:build",
+                        "disableHostCheck": true
                     },
                     "configurations": {
                         "production": {
