--- a/ui/dashboard/Makefile
+++ b/ui/dashboard/Makefile
@@ -26,11 +26,11 @@ debug:
 	$(ECHO) "-=DEBUG=-"
 
 install:
-	$(NPM) install
+	$(NPM) ci
 
 dev:
 	$(NODE) scripts/prebuild-env-dev.js
-	$(NG) serve --port $(PORT) --base-href $(BASEHREF) --verbose=false
+	$(NG) serve --port $(PORT) --verbose=false
 
 build: install
 	$(NODE) scripts/prebuild-env-dev.js
@@ -44,7 +44,7 @@ build-prod: install
 
 prod:
 	$(NODE) scripts/prebuild-env-prod.js
-	$(NG) serve --port $(PORT) --base-href $(BASEHREF) --prod
+	$(NG) serve --port $(PORT) --prod
 
 package:
 	$(UNTAR) $(DIST_TAR)
