--- a/ui/dashboard/package.json
+++ b/ui/dashboard/package.json
@@ -13,69 +13,61 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "12.2.12",
-    "@angular/cdk": "12.2.12",
-    "@angular/common": "12.2.12",
-    "@angular/compiler": "12.2.12",
-    "@angular/core": "12.2.12",
-    "@angular/forms": "12.2.12",
-    "@angular/localize": "12.2.12",
-    "@angular/platform-browser": "12.2.12",
-    "@angular/platform-browser-dynamic": "12.2.12",
-    "@angular/router": "12.2.12",
-    "@sentry/browser": "5.27.4",
-    "@swimlane/ngx-charts": "19.2.0",
-    "@types/lodash-es": "4.17.3",
+    "@angular/animations": "13.3.1",
+    "@angular/cdk": "13.3.2",
+    "@angular/common": "13.3.1",
+    "@angular/compiler": "13.3.1",
+    "@angular/core": "13.3.1",
+    "@angular/forms": "13.3.1",
+    "@angular/localize": "13.3.1",
+    "@angular/platform-browser": "13.3.1",
+    "@angular/platform-browser-dynamic": "13.3.1",
+    "@angular/router": "13.3.1",
+    "@sentry/browser": "6.19.3",
+    "@swimlane/ngx-charts": "20.1.0",
+    "@types/d3": "7.1.0",
     "convert-yaml": "2.0.5",
     "d3-drag": "3.0.0",
-    "d3-transition": "3.0.1",
+    "d3-selection": "2.0.0",
+    "d3-shape": "3.1.0",
+    "d3-transition": "2.0.0",
     "d3-zoom": "3.0.0",
-    "dagre-compound": "0.0.8",
-    "ejs": "3.1.5",
-    "jquery": "3.5.1",
-    "js-yaml": "3.14.0",
-    "lodash-es": "4.17.15",
-    "moment": "2.29.1",
-    "monaco-editor": "0.31.1",
-    "ng-zorro-antd": "12.0.1",
-    "rxjs": "6.6.3",
-    "zone.js": "0.11.4"
+    "dagre": "0.8.5",
+    "dagre-compound": "0.0.11",
+    "ejs": "3.1.6",
+    "jquery": "3.6.0",
+    "js-yaml": "4.1.0",
+    "lodash-es": "4.17.21",
+    "moment": "2.29.2",
+    "monaco-editor": "0.33.0",
+    "ng-zorro-antd": "13.1.1",
+    "rxjs": "7.5.5",
+    "tslib": "2.3.0",
+    "zone.js": "0.11.5"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "12.1.3",
-    "@angular-devkit/build-angular": "12.2.12",
-    "@angular-devkit/build-ng-packagr": "0.1002.0",
-    "@angular/cli": "12.2.12",
-    "@angular/compiler-cli": "12.2.12",
-    "@angular/language-service": "12.2.12",
-    "@types/jasmine": "3.6.2",
-    "@types/jasminewd2": "2.0.8",
-    "@types/node": "14.14.11",
+    "@angular-builders/custom-webpack": "13.1.0",
+    "@angular-devkit/build-angular": "13.3.1",
+    "@angular/cli": "13.3.1",
+    "@angular/compiler-cli": "13.3.1",
+    "@angular/language-service": "13.3.1",
+    "@types/jasmine": "4.0.1",
+    "@types/jasminewd2": "2.0.10",
+    "@types/lodash-es": "4.17.6",
+    "@types/node": "17.0.23",
     "codelyzer": "6.0.2",
-    "d3": "7.2.1",
-    "d3-array": "3.1.1",
-    "d3-brush": "3.0.0",
-    "d3-color": "3.0.1",
-    "d3-force": "3.0.0",
-    "d3-format": "3.1.0",
-    "d3-hierarchy": "3.1.1",
-    "d3-interpolate": "3.0.1",
-    "d3-scale": "4.0.2",
-    "d3-selection": "3.0.0",
-    "d3-shape": "3.0.1",
-    "d3-time-format": "4.1.0",
-    "eslint": "8.1.0",
-    "jasmine-core": "3.10.1",
+    "eslint": "8.12.0",
+    "jasmine-core": "4.0.1",
     "jasmine-spec-reporter": "7.0.0",
-    "karma": "6.3.7",
-    "karma-chrome-launcher": "3.1.0",
+    "karma": "6.3.17",
+    "karma-chrome-launcher": "3.1.1",
     "karma-coverage-istanbul-reporter": "3.0.3",
-    "karma-jasmine": "4.0.1",
+    "karma-jasmine": "4.0.2",
     "karma-jasmine-html-reporter": "1.7.0",
-    "ng-packagr": "12.2.5",
+    "ng-packagr": "13.3.0",
     "protractor": "7.0.0",
-    "ts-node": "10.4.0",
-    "typescript": "4.3.5",
+    "ts-node": "10.7.0",
+    "typescript": "4.6.3",
     "webpack-bundle-analyzer": "4.5.0"
   }
 }
