--- a/ui/dashboard/projects/utask-lib/package.json
+++ b/ui/dashboard/projects/utask-lib/package.json
@@ -2,27 +2,26 @@
     "name": "@ovhcloud/utask-lib",
     "version": "0.0.0",
     "peerDependencies": {
-        "monaco-editor": "^0.31.1",
-        "ng-zorro-antd": "^12.0.1",
-        "d3-drag": "^3.0.0",
-        "d3-selection": "^3.0.0",
-        "d3-shape": "^3.0.1",
-        "d3-transition": "^3.0.1",
-        "d3-zoom": "^3.0.0",
-        "dagre-compound": "^0.0.8",
-        "@angular/common": "^12.2.12",
-        "@angular/core": "^12.2.12",
-        "@angular/animations": "^12.2.12",
-        "@angular/compiler": "^12.2.12",
-        "@angular/forms": "^12.2.12",
-        "@angular/localize": "^12.2.12",
-        "@angular/platform-browser": "^12.2.12",
-        "@angular/platform-browser-dynamic": "^12.2.12",
-        "@angular/router": "^12.2.12",
+        "@angular/animations": "^13.3.1",
+        "@angular/cdk": "^13.3.2",
+        "@angular/common": "^13.3.1",
+        "@angular/compiler": "^13.3.1",
+        "@angular/core": "^13.3.1",
+        "@angular/forms": "^13.3.1",
+        "@angular/localize": "^13.3.1",
+        "@angular/platform-browser-dynamic": "^13.3.1",
+        "@angular/platform-browser": "^13.3.1",
+        "@angular/router": "^13.3.1",
+        "@swimlane/ngx-charts": "^20.1.0",
         "convert-yaml": "^2.0.5",
-        "moment": "^2.29.1",
-        "@types/lodash-es": "^4.17.3",
-        "@swimlane/ngx-charts": "^19.2.0"
+        "dagre-compound": "^0.0.11",
+        "jquery": "^3.6.0",
+        "js-yaml": "^4.1.0",
+        "lodash-es": "^4.17.21",
+        "moment": "^2.29.2",
+        "monaco-editor": "^0.33.0",
+        "ng-zorro-antd": "^13.1.1",
+        "rxjs": "^7.5.5"
     },
     "dependencies": {}
 }
