--- a/vscode/web/package.json
+++ b/vscode/web/package.json
@@ -23,6 +23,7 @@
     "d3-drag": "^3.0.0",
     "d3-scale": "^4.0.2",
     "d3-zoom": "^3.0.0",
+    "normalize.css": "^8.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
