keep utask version while using the Makefile inside the Docker image
Signed-off-by: Wesley GALIPO <wesley.galipo@ovhcloud.com>

--- a/hack/Makefile-child
+++ b/hack/Makefile-child
@@ -1,6 +1,9 @@
+LAST_COMMIT=
+VERSION=
+
 all:
 	GO111MODULE=on go get -d -v  ./...
-	GO111MODULE=on go build -o utask ./cmd/utask
+	GO111MODULE=on go build -ldflags "-X github.com/ovh/utask.Commit=${LAST_COMMIT} -X github.com/ovh/utask.Version=${VERSION}" -o utask ./cmd/utask
 	for p in $$(ls ./plugins); do if [ -d ./plugins/$$p ]; then GO111MODULE=on go build --buildmode=plugin -o ./plugins/$$p.so ./plugins/$$p/*.go; fi; done
 	for p in $$(ls ./init);    do if [ -d ./init/$$p ];    then GO111MODULE=on go build --buildmode=plugin -o ./init/$$p.so    ./init/$$p/*.go;    fi; done
 
