use yaml error response in UI
Signed-off-by: Wesley GALIPO <wesley.galipo@ovhcloud.com>

--- a/ui/dashboard/package.json
+++ b/ui/dashboard/package.json
@@ -43,6 +43,7 @@
     "ng-zorro-antd": "13.1.1",
     "rxjs": "7.5.5",
     "tslib": "2.3.0",
+    "yaml": "^2.3.2",
     "zone.js": "0.11.5"
   },
   "devDependencies": {
