--- a/vscode/web/package.json
+++ b/vscode/web/package.json
@@ -10,15 +10,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.3.0",
-    "@angular/common": "~13.3.0",
-    "@angular/compiler": "~13.3.0",
-    "@angular/core": "~13.3.0",
-    "@angular/forms": "~13.3.0",
-    "@angular/platform-browser": "~13.3.0",
-    "@angular/platform-browser-dynamic": "~13.3.0",
-    "@angular/router": "~13.3.0",
-    "@ovhcloud/utask-lib": "^1.18.1-1-g7993-dev",
+    "@angular/animations": "~16.2.10",
+    "@angular/common": "~16.2.10",
+    "@angular/compiler": "~16.2.10",
+    "@angular/core": "~16.2.10",
+    "@angular/forms": "~16.2.10",
+    "@angular/platform-browser": "~16.2.10",
+    "@angular/platform-browser-dynamic": "~16.2.10",
+    "@angular/router": "~16.2.10",
+    "@ovhcloud/utask-lib": "^1.29.0",
     "d3": "^7.4.4",
     "d3-drag": "^3.0.0",
     "d3-scale": "^4.0.2",
@@ -26,12 +26,12 @@
     "normalize.css": "^8.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~16.1.4",
-    "@angular/cli": "~16.1.4",
-    "@angular/compiler-cli": "~13.3.0",
+    "@angular-devkit/build-angular": "~16.2.6",
+    "@angular/cli": "~16.2.6",
+    "@angular/compiler-cli": "~16.2.10",
     "@types/d3-scale": "^4.0.2",
     "@types/d3-selection": "^3.0.2",
     "@types/d3-zoom": "^3.0.1",
@@ -44,6 +44,6 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.6.2"
+    "typescript": "~4.9.5"
   }
 }
