chore(ui): upgrade to angular 16
Signed-off-by: Thomas Bétrancourt <thomas@betrancourt.net>

--- a/ui/dashboard/package.json
+++ b/ui/dashboard/package.json
@@ -13,22 +13,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "13.3.1",
-    "@angular/cdk": "13.3.2",
-    "@angular/common": "13.3.1",
-    "@angular/compiler": "13.3.1",
-    "@angular/core": "13.3.1",
-    "@angular/forms": "13.3.1",
-    "@angular/localize": "13.3.1",
-    "@angular/platform-browser": "13.3.1",
-    "@angular/platform-browser-dynamic": "13.3.1",
-    "@angular/router": "13.3.1",
+    "@angular/animations": "16.2.12",
+    "@angular/cdk": "16.2.12",
+    "@angular/common": "16.2.12",
+    "@angular/compiler": "16.2.12",
+    "@angular/core": "16.2.12",
+    "@angular/forms": "16.2.12",
+    "@angular/localize": "16.2.12",
+    "@angular/platform-browser": "16.2.12",
+    "@angular/platform-browser-dynamic": "16.2.12",
+    "@angular/router": "16.2.12",
     "@sentry/browser": "6.19.3",
-    "@swimlane/ngx-charts": "20.4.1",
+    "@swimlane/ngx-charts": "20.5.0",
     "@types/d3": "7.1.0",
     "convert-yaml": "2.0.5",
     "d3-drag": "3.0.0",
-    "d3-selection": "2.0.0",
+    "d3-selection": "3.0.0",
     "d3-shape": "3.1.0",
     "d3-transition": "3.0.1",
     "d3-zoom": "3.0.0",
@@ -40,22 +40,22 @@
     "lodash-es": "4.17.21",
     "moment": "2.29.4",
     "monaco-editor": "0.33.0",
-    "ng-zorro-antd": "13.1.1",
+    "ng-zorro-antd": "16.2.2",
     "rxjs": "7.5.5",
     "tslib": "2.3.0",
-    "yaml": "^2.3.2",
-    "zone.js": "0.11.5"
+    "yaml": "2.3.2",
+    "zone.js": "0.13.3"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "13.1.0",
-    "@angular-devkit/build-angular": "13.3.11",
-    "@angular/cli": "^13.3.1",
-    "@angular/compiler-cli": "13.3.1",
-    "@angular/language-service": "13.3.1",
+    "@angular-builders/custom-webpack": "16.0.1",
+    "@angular-devkit/build-angular": "16.2.10",
+    "@angular/cli": "16.2.10",
+    "@angular/compiler-cli": "16.2.12",
+    "@angular/language-service": "16.2.12",
     "@types/jasmine": "4.0.1",
     "@types/jasminewd2": "2.0.10",
     "@types/lodash-es": "4.17.6",
-    "@types/node": "17.0.23",
+    "@types/node": "18.11.18",
     "codelyzer": "6.0.2",
     "eslint": "8.12.0",
     "jasmine-core": "4.0.1",
@@ -65,10 +65,10 @@
     "karma-coverage-istanbul-reporter": "3.0.3",
     "karma-jasmine": "4.0.2",
     "karma-jasmine-html-reporter": "1.7.0",
-    "ng-packagr": "13.3.0",
+    "ng-packagr": "16.2.3",
     "protractor": "7.0.0",
     "ts-node": "10.7.0",
-    "typescript": "4.6.3",
+    "typescript": "4.9.5",
     "webpack-bundle-analyzer": "4.5.0"
   }
 }
