--- a/ui/dashboard/projects/utask-lib/package.json
+++ b/ui/dashboard/projects/utask-lib/package.json
@@ -2,26 +2,26 @@
     "name": "@ovhcloud/utask-lib",
     "version": "0.0.0",
     "peerDependencies": {
-        "@angular/animations": "^13.3.1",
-        "@angular/cdk": "^13.3.2",
-        "@angular/common": "^13.3.1",
-        "@angular/compiler": "^13.3.1",
-        "@angular/core": "^13.3.1",
-        "@angular/forms": "^13.3.1",
-        "@angular/localize": "^13.3.1",
-        "@angular/platform-browser-dynamic": "^13.3.1",
-        "@angular/platform-browser": "^13.3.1",
-        "@angular/router": "^13.3.1",
-        "@swimlane/ngx-charts": "^20.1.0",
+        "@angular/animations": "^16.2.12",
+        "@angular/cdk": "^16.2.12",
+        "@angular/common": "^16.2.12",
+        "@angular/compiler": "^16.2.12",
+        "@angular/core": "^16.2.12",
+        "@angular/forms": "^16.2.12",
+        "@angular/localize": "^16.2.12",
+        "@angular/platform-browser": "^16.2.12",
+        "@angular/platform-browser-dynamic": "^16.2.12",
+        "@angular/router": "^16.2.12",
+        "@swimlane/ngx-charts": "^20.5.0",
         "convert-yaml": "^2.0.5",
         "dagre-compound": "^0.0.11",
         "jquery": "^3.6.0",
         "js-yaml": "^4.1.0",
         "lodash-es": "^4.17.21",
-        "moment": "^2.29.2",
+        "moment": "^2.29.4",
         "monaco-editor": "^0.33.0",
-        "ng-zorro-antd": "^13.1.1",
-        "rxjs": "^7.5.5"
-    },
-    "dependencies": {}
+        "ng-zorro-antd": "^16.2.2",
+        "rxjs": "^7.5.5",
+        "yaml": "^2.3.4"
+    }
 }
