chore(ui): add experimental serve using esbuild
Signed-off-by: Thomas Bétrancourt <thomas@betrancourt.net>

--- a/ui/dashboard/package.json
+++ b/ui/dashboard/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "experimental": "ng serve -c experimental",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
