fix(vscode): build
Signed-off-by: Thomas Bétrancourt <thomas@betrancourt.net>

--- a/vscode/package.json
+++ b/vscode/package.json
@@ -108,7 +108,8 @@
 		"watch-tests": "tsc -p . -w --outDir out",
 		"pretest": "npm run compile-tests && npm run compile && npm run lint",
 		"lint": "eslint src --ext ts",
-		"test": "node ./out/test/runTest.js"
+		"test": "node ./out/test/runTest.js",
+		"vsce": "vsce"
 	},
 	"dependencies": {
 		"vscode-nls": "^5.0.0",
