--- a/vscode/web/package.json
+++ b/vscode/web/package.json
@@ -34,6 +34,7 @@
     "@angular/compiler-cli": "16.2.12",
     "@types/d3-scale": "^4.0.2",
     "@types/d3-selection": "^3.0.2",
+    "@types/d3-shape": "^3.1.6",
     "@types/d3-zoom": "^3.0.1",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
