chore: upgrade to angular 17

--- a/ui/dashboard/package.json
+++ b/ui/dashboard/package.json
@@ -14,16 +14,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "16.2.12",
+    "@angular/animations": "17.3.12",
     "@angular/cdk": "16.2.12",
-    "@angular/common": "16.2.12",
-    "@angular/compiler": "16.2.12",
-    "@angular/core": "16.2.12",
-    "@angular/forms": "16.2.12",
-    "@angular/localize": "16.2.12",
-    "@angular/platform-browser": "16.2.12",
-    "@angular/platform-browser-dynamic": "16.2.12",
-    "@angular/router": "16.2.12",
+    "@angular/common": "17.3.12",
+    "@angular/compiler": "17.3.12",
+    "@angular/core": "17.3.12",
+    "@angular/forms": "17.3.12",
+    "@angular/localize": "17.3.12",
+    "@angular/platform-browser": "17.3.12",
+    "@angular/platform-browser-dynamic": "17.3.12",
+    "@angular/router": "17.3.12",
+    "@ctrl/tinycolor": "^4.2.0",
     "@sentry/browser": "6.19.3",
     "@swimlane/ngx-charts": "20.5.0",
     "@types/d3": "7.1.0",
@@ -41,18 +42,18 @@
     "lodash-es": "4.17.21",
     "moment": "2.29.4",
     "monaco-editor": "0.33.0",
-    "ng-zorro-antd": "16.2.2",
+    "ng-zorro-antd": "17.4.1",
     "rxjs": "7.5.5",
     "tslib": "2.3.0",
     "yaml": "2.3.2",
-    "zone.js": "0.14.0"
+    "zone.js": "0.14.10"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "16.0.1",
-    "@angular-devkit/build-angular": "16.2.10",
-    "@angular/cli": "16.2.10",
-    "@angular/compiler-cli": "16.2.12",
-    "@angular/language-service": "16.2.12",
+    "@angular-builders/custom-webpack": "17.0.2",
+    "@angular-devkit/build-angular": "17.3.17",
+    "@angular/cli": "17.3.17",
+    "@angular/compiler-cli": "17.3.12",
+    "@angular/language-service": "17.3.12",
     "@types/jasmine": "4.0.1",
     "@types/jasminewd2": "2.0.10",
     "@types/lodash-es": "4.17.6",
@@ -66,10 +67,10 @@
     "karma-coverage-istanbul-reporter": "3.0.3",
     "karma-jasmine": "4.0.2",
     "karma-jasmine-html-reporter": "1.7.0",
-    "ng-packagr": "16.2.3",
+    "ng-packagr": "17.3.0",
     "protractor": "7.0.0",
     "ts-node": "10.7.0",
-    "typescript": "5.9.3",
+    "typescript": "5.4.5",
     "webpack-bundle-analyzer": "4.5.0"
   }
 }
